<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:background="@drawable/bcg"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:text="@string/muhammad_hidayatullah_quiz_1"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="25dp"
        android:layout_below="@id/tv1"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_below="@id/et1"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:text="@string/tipe_pelanggan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_below="@id/tv2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:text="@string/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb2"
            android:text="@string/silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb3"
            android:text="@string/biasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <EditText
        android:id="@+id/et2"
        android:hint="@string/kb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et3"
        android:hint="@string/jumlah"
        android:layout_below="@id/et2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/b1"
        android:layout_below="@id/et3"
        android:layout_marginTop="20dp"
        android:text="@string/proses"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>